# small_vlm_video_analysis

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/inference/: factory_ego_marlin.json
data/: README.md
datasets/: README.md
datasets/factory_ego/: README.md  curation.json  dataset.yaml  manifest.lock.json
datasets/konro_inspection/: README.md  dataset.yaml
docs/: README.md
docs/assets/: README.md
docs/benchmark/: README.md  data-contract.md  evaluation.md  events.md  konro-results.md  operations.md
docs/decisions/: 0001-separate-facts-predictions-evaluations.md  0002-adopt-src-layout.md  0003-video-first-experiment-platform.md
docs/design/: experiment-platform.md
docs/development/: public-release.md  repository-layout.md
docs/guides/: bring-your-own-data.md
docs/reference/: annotator.md  models.md  sop-format.md
docs/training/: ms-swift.md
evaluations/: README.md  factory_ego_marlin_reviewed6.json  factory_ego_marlin_stratified6.json  factory_ego_qwen3-vl-4b_stratified6.json  factory_ego_qwen3.5_stratified6.json
examples/konro_inspection/: ground_truth.json  procedure.md  sop.yaml  sop_missing_step.yaml  sop_wrong_order.yaml
reports/: marlin-2b-pilot4.md  model_comparison.md
reports/data/: reference_tiou_fable5.json  reference_tiou_opus48.json  reference_tiou_pilot6_vs_opus48.json
runs/: index.jsonl
runs/20260710-factory_ego-fable5-reference-r1/: run.yaml
runs/20260710-factory_ego-opus48-reference-r1/: inputs.lock.json  run.yaml
runs/20260710-factory_ego-qwen3-4b-baseline-r1/: inputs.lock.json  run.yaml
runs/20260711-factory_ego-fable5-reference-r1/: inputs.lock.json  run.yaml
runs/20260711-factory_ego-gemma4-e2b-pilot6-r1/: inputs.lock.json  run.yaml
runs/20260711-factory_ego-internvl3-2b-pilot6-r1/: run.yaml
runs/20260711-factory_ego-minicpm-4.6-pilot6-r1/: run.yaml
runs/20260711-factory_ego-opus48-online5-r1/: inputs.lock.json  run.yaml
runs/20260711-factory_ego-opus48-reference-r1/: run.yaml
runs/20260711-factory_ego-qwen3-2b-pilot6-r1/: run.yaml
runs/20260711-factory_ego-qwen3.5-0.8b-pilot6-r1/: run.yaml
runs/20260711-factory_ego-qwen3.5-2b-pilot6-r1/: run.yaml
runs/20260713-factory_ego-marlin-2b-pilot4-r1/: run.yaml  (+1 more)
schemas/: README.md
src/: cli.py  extract.py  judge.py  observe.py  sop.py
tests/: test_judge.py
training_runs/: README.md
web/: index.html  package-lock.json  package.json  vite.config.ts
(+457 files in other folders)
