[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-vlm-temporal-grounding"
version = "0.1.0"
description = "Small-VLM platform for temporal events in industrial egocentric video"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "PyYAML>=6.0",
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
vlm = [
  "opencv-python>=4.8",
  "mlx-vlm>=0.6.0",
  "mlx>=0.20.0",
]
marlin = [
  "av>=17.0",
  "torch>=2.12",
  "torchcodec>=0.14",
  "torchvision>=0.27",
  "transformers>=5.12,<6",
]
fetch = [
  "huggingface_hub>=0.30",
  "opencv-python>=4.8",
]
test = [
  "pytest>=8.0",
  "httpx2>=2.5",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sop-app = "small_vlm_sop_check.apps.launcher:main"
sop-check = "small_vlm_sop_check.cli:main"
sop-view = "small_vlm_sop_check.apps.launcher:main"
sop-export-ms-swift = "small_vlm_sop_check.training.ms_swift:main"
sop-train = "small_vlm_sop_check.training.run:main"
sop-compare = "small_vlm_sop_check.evaluation.compare:main"
sop-dataset = "small_vlm_sop_check.dataset_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"small_vlm_sop_check.apps" = ["frontend_dist/index.html", "frontend_dist/assets/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
